[package]
name = "gmail_check"
version = "0.1.0"
authors = ["Jon Staley <jmstaley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
feed-rs = "0.2.1"
